<resources>
    <string name="app_name">ITPG7</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="textview">TextView</string>
    <string name="title_activity_nav_test">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="financial_dashboard">Financial Dashboard</string>
    <string name="client_overview">Client Overview</string>
    <string name="know_your_client">Know Your Client</string>
    <string name="map">Map</string>
    <string name="title_activity_main_activity2as">MainActivity</string>
    <string name="market_analysis"><u>Market Analysis</u></string>
    <string name="client_performance"><b><u>Client Performance</u></b></string>
    <string name="worst_performers"><b><u>Worst Performers:</u></b></string>
    <string name="energy">Energy</string>
    <string name="security_page"><u><b>Security Page</b></u></string>
    <string name="enter_ticker">Enter Ticker:</string>
    <string name="existing_client"><u><b>Existing Client</b></u></string>
    <string name="KYCClientname"><u><b>TextView</b></u></string>
    <string name="kyc_page"><b><u>KYC Page</u></b></string>
    <string name="incoming_client"><b><u>Know Your Client</u></b></string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="delete_note">Delete note</string>
    <string name="cancel_dialogue">Cancel</string>
</resources>