<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarketView">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/backgroundmain" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView16"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="33dp"
        android:text="@string/market_analysis"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView16"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-505dp"
        android:layout_marginEnd="55dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioTech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tech"
            />

        <RadioButton
            android:id="@+id/radioFinance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Finance"
            />

        <RadioButton
            android:id="@+id/radioEnergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/energy"
            />
        <RadioButton
            android:id="@+id/radioCrypto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Crypto"
            />
    </RadioGroup>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/trendview"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_below="@+id/radiogroup"
        android:layout_marginTop="463dp" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/customerview"
        android:layout_width="250dp"
        android:layout_height="160dp"
        android:layout_below="@+id/radiogroup"
        android:layout_marginTop="729dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nav_view"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="166dp"
        android:text="@string/client_performance"
        android:textColor="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="140dp"
        android:layout_height="139dp"
        android:layout_alignBottom="@+id/textView7"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="-144dp"
        android:layout_toEndOf="@+id/customerview"
        android:text="\nPeter Surbeck\n\nSelidova Sergeyevna\n\nLouis DuPuis "
        android:textColor="@color/design_default_color_primary_variant"
        android:textStyle="bold"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nav_view"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="165dp"
        android:layout_toEndOf="@+id/customerview"
        android:text="@string/worst_performers"
        android:textColor="@color/cardview_dark_background" />

    <Button
        android:id="@+id/buttonsec"
        android:layout_width="154dp"
        android:layout_height="37dp"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-290dp"
        android:background="@color/black"
        android:text="Securities ->"
        app:backgroundTint="#003662" />

</RelativeLayout>