<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Notes_Listt">


    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:includeFontPadding="false"
        android:text="@string/my_notes"
        android:textSize="@dimen/_25sdp"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/textMyNotes"
        app:layout_constraintTop_toBottomOf="@id/textMyNotes">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_client_search"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:hint="@string/search_notes"
            android:textColorHint="@color/white"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="@dimen/_12sdp"
        android:paddingStart="0dp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"
        tools:layout_editor_absoluteX="3dp" />

    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        app:srcCompat="@drawable/ic_add"
        tools:layout_editor_absoluteY="731dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="@id/textMyNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textMyNotes"/>

</androidx.constraintlayout.widget.ConstraintLayout>