<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutCreateNote"
    tools:context=".activities.CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <ImageView
                android:id="@+id/imageSave"
                android:layout_width="34dp"
                android:layout_height="31dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack"
                app:layout_constraintVertical_bias="0.461"
                app:srcCompat="@drawable/ic_done" />

            <EditText
                android:id="@+id/inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/edit_text_border"
                android:textAlignment="center"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/imageBack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:includeFontPadding="false"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
                app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"/>

            <EditText
                android:id="@+id/inputNoteSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/viewSubtitleIndicator"
                app:layout_constraintTop_toBottomOf="@id/textDateTime"
                />

            <View
                android:id="@+id/viewSubtitleIndicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/inputNoteSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputNoteSubtitle"/>

            <EditText
                android:id="@+id/inputNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputNoteSubtitle"
                />

            <ImageView
                android:id="@+id/layoutDeleteNote"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_delete"
                android:background="@drawable/background_delete_color"
                app:tint="@color/colordelete"
                android:layout_marginEnd="@dimen/_40sdp"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>



    
</LinearLayout>